@@ -577,6 +577,7 @@ int main(int argc, char **argv) {
 	  if (config->areafixMsgSize) printf("areafixMsgSize - %u\n", config->areafixMsgSize);
 	  if (config->areafixSplitStr) printf("areafixSplitStr - \"%s\"\n", config->areafixSplitStr);
 	  if (config->areafixOrigin) printf("areafixOrigin - \"%s\"\n", config->areafixOrigin);
+	  printf("RobotsArea: %s\n",(config->robotsArea)?config->robotsArea:"all areas");
 
   if (hpt==0) {
       printf("\n=== FILEFIX CONFIG ===\n");
