@@ -3,6 +3,10 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Wed Sep 27 20:24:45 NOVST 2000
+* robotsArea token
+
+----- cvs ci ------
 Tue Sep 26 00:25:41 NOVST 2000
 max (patch from Serguei Revtov):
 * addrDiffAlways value for BundleNameStyle & linkBundleNameStyle
